[package]
name = "my-crate"
version = "0.1.0"
authors = ["My Name <my@email.com>"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
lambda_runtime = "^0.1"
log = "^0.4"
rusoto_cloudfront = { version = "0.42.0", features = ["serialize_structs"] }
rusoto_core = "0.42.0"
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
serde_with = "1.3.1"
simple_logger = "^1"
uuid = { version = "0.8", features = ["serde", "v4"] }
